5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1760_672.log
== TEST (2019-05-20 18:47:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:09:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:06:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
print(ones((v))
-- ERROR:
File "XXXX", line 6
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:07:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:08:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:09:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
print(v[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:20:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
v = ones(v, dtype=int)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:20:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = array(eval(input("v:")))
v = ones(v, dtype=int)
print(v)
-- EXECUTION TIME:
0.497199
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
